| Summary: | ASTERISK-27870: app_confbridge: Conference bridge and announcer channels are not removed if conference is ended as soon as it starts | ||
| Reporter: | Robert Mordec (veilen) | Labels: | |
| Date Opened: | 2018-05-21 06:23:22 | Date Closed: | 2018-07-02 06:50:59 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 13.21.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If a conference is ended very quickly after it was created, ie. first user immediatlely hangs up, conference bridge and announcer channels are not removed. You can list them using _bridge show all_ and _core show channels_. Repeating this process (calling conference and hanging up quickly), creates new bridge and announcers.
When conference is created, *push_announcer()* function is added to playback queue task processor and conference object reference is bumped. The issue arises when conference is ended while _push_announcer()_ function is still going. In that case _ao2_cleanup(conference)_ at the end of _push_announcer()_ will call the destructor function - *destroy_conference_bridge()*. The _destroy_conference_bridge()_ function will then add _hangup_playback_ task to playback queue and will wait for it to end. Since it is already a current task from playback queue it will wait forever. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-05-21 06:23:24.217-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Robert Mordec (veilen) 2018-05-21 06:24:43.698-0500 I will submit a fix to gerrit soon. By: Friendly Automation (friendly-automation) 2018-07-02 06:51:00.719-0500 Change 9026 merged by Jenkins2: app_confbridge: Bridge and announcers not removed if conference ends quickly [https://gerrit.asterisk.org/9026|https://gerrit.asterisk.org/9026] By: Friendly Automation (friendly-automation) 2018-07-02 07:04:47.674-0500 Change 9028 merged by Jenkins2: app_confbridge: Bridge and announcers not removed if conference ends quickly [https://gerrit.asterisk.org/9028|https://gerrit.asterisk.org/9028] By: Friendly Automation (friendly-automation) 2018-07-02 07:18:10.327-0500 Change 9029 merged by Jenkins2: app_confbridge: Bridge and announcers not removed if conference ends quickly [https://gerrit.asterisk.org/9029|https://gerrit.asterisk.org/9029] | ||